--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 /*@import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";*/
+
 body{
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
+  background-color: red;
+  overflow: hidden;
+
 }
